Fix data race in ChannelAssociatedGroupController

Introduces an atomic value to guard access to a cached
TaskRunner which read from multiple threads but written
at some arbitrary time on the IPC thread inside Bind().

BUG=630835
R=yzshen@chromium.org

Review-Url: https://codereview.chromium.org/2178773002
Cr-Commit-Position: refs/heads/master@{#407504}

Former-commit-id: 9098435cfcf0bb09325351beabbb27c8ad62632f